tests/sksl/errors/golden/Ossfuzz27650.glsl
### Compilation failed:

error: 1: expected 'int', but found 'float'
1 error
